--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="analyze and cluster encrypted traffic" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
     <title>Traffic Analyzer</title>
   </head>
   <body>
